Configuration to control whether to administer topic and subscriptions